objects/AIA_Plan_Benefit_Comment_Codes__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingArrangement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FundingArrangement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_ASO_Only__c</fullName>
        <formula>IF(Plan_Limitation__c != null,(IF(Plan_Limitation__r.IS_ASO_Only__c = 'Yes' || Plan_Limitation__r.IS_ASO_Only__c = 'Y', true, false) ), IF(ISPICKVAL(Plan_Copay_Type__r.Plan_Benefits__r.IS_ASO_Only__c,'Yes') || (ISPICKVAL(Plan_Copay_Type__r.Plan_Benefits__r.IS_ASO_Only__c, 'Y')), true, false))</formula>
        <label>IS_ASO_Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMandateTrue__c</fullName>
        <formula>IF(NOT(ISNULL(Plan_Copay_Type__c)), (IF( ISPICKVAL(Plan_Copay_Type__r.MandateIndicator__c,'Yes'),true,false)),False) ||

(IF(NOT(ISNULL(Plan_Limitation__c)),(IF(Plan_Limitation__r.MandateIndicator__c = True ,true,false)),false))</formula>
        <label>IsMandateTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <label>IsRequired</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <formula>If(Ispickval(IsRequired__c, 'Yes'), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>IF(Plan_Limitation__c != null,(Plan_Limitation__r.Jurisdiction__c), IF(Plan_Copay_Type__c != null, Plan_Copay_Type__r.Jurisdiction__c, null))</formula>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitation_Type__c</fullName>
        <formula>TEXT(Plan_Limitation__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limitation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Benefit_Id__c</fullName>
        <formula>Plan_Limitation__r.PCS_Benefit_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCS Benefit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBenefitName__c</fullName>
        <formula>Plan_Limitation__r.ParentBenefitName__c</formula>
        <label>ParentBenefitName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanID__c</fullName>
        <formula>IF(  Plan_Copay_Type__c ==Null , Plan_Limitation__r.Plan_Benefits__r.Plan__c , Plan_Copay_Type__r.Plan_Benefits__r.Plan__c )</formula>
        <label>PlanID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Benefit_Grouper_Name__c</fullName>
        <formula>IF( Plan_Limitation__c !=null,Plan_Limitation__r.Plan_Benefits__r.Grouper_Name__c ,
if( !ISNULL( Plan_Copay_Type__c ), Plan_Copay_Type__r.Plan_Benefits__r.Grouper_Name__c ,'' ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Benefit Grouper Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Benefit_Parent_Name__c</fullName>
        <formula>IF( Plan_Limitation__c !=null,Plan_Limitation__r.Plan_Benefits__r.Parent_Benefit_Name__c ,if( !ISNULL( Plan_Copay_Type__c ), Plan_Copay_Type__r.Plan_Benefits__r.Parent_Benefit_Name__c ,'' ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Benefit Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Copay_Type__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan Copay Type</label>
        <referenceTo>AIA_Plan_Copay_Type__c</referenceTo>
        <relationshipLabel>Plan Benefit Comment Codes</relationshipLabel>
        <relationshipName>Plan_Benefit_Comment_Coces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Limitation__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan Limitation</label>
        <referenceTo>AIA_Plan_Limitation__c</referenceTo>
        <relationshipLabel>Plan Benefit Comment Codes</relationshipLabel>
        <relationshipName>Plan_Benefit_Comment_Coces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <formula>IF( IsMandateTrue__c=true &amp;&amp; Is_Required__c=true ,3,(if(IsMandateTrue__c=true &amp;&amp; Is_Required__c=false,2,if(IsMandateTrue__c=false &amp;&amp; Is_Required__c=true,1,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandates</fullName>
                </value>
                <value>
                    <fullName>Limitation</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Additional Ranges</fullName>
                </value>
                <value>
                    <fullName>Comments</fullName>
                </value>
                <value>
                    <fullName>Limit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_Condition_ID__c</fullName>
        <formula>Plan_Limitation__r.Variation_Condition_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Condition ID</label>
        <type>Text</type>
    </fields>
    <label>Plan Benefit Comment Codes</label>
    <nameField>
        <displayFormat>PBC-{000000}</displayFormat>
        <label>Plan Benefit Comment Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Benefit Comment Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Comment__c</columns>
        <columns>IsMandateTrue__c</columns>
        <columns>Is_Required__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>Plan_Copay_Type__c</columns>
        <columns>Plan_Benefit_Parent_Name__c</columns>
        <columns>PlanID__c</columns>
        <columns>Plan_Limitation__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PlanID__c</field>
            <operation>equals</operation>
            <value>a0vP00000049G9e</value>
        </filters>
        <label>All2</label>
    </listViews>
</CustomObject>